--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,5 +8,7 @@
 @import "base/reset";
 @import "base/object";
 
+@import "shared/nav_menu";
+
 @import "sign_in/layout";
 @import "application/layout";
