--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -65,7 +65,7 @@
 
   <div class='form-group form-action-group'>
     <label></label>
-    <%=f.submit 'Save', class: 'btn btn-primary', id: 'btn-alert-form' %>
+    <%=f.submit 'Save', class: 'btn btn-primary btn-app', id: 'btn-alert-form' %>
   </div>
 
 <% end %>
