--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -10,6 +10,6 @@
   
   <div class='form-group form-action-group'>
     <label></label>
-    <%=f.submit 'Save', label: false, class: 'btn btn-primary' %>
+    <%=f.submit 'Save', label: false, class: 'btn btn-primary btn-app' %>
   </div>
 <% end %>
