--- a/app/views/groups/_search_member.html.erb
+++ b/app/views/groups/_search_member.html.erb
@@ -6,7 +6,7 @@
 
           >
     <span class="input-group-btn">
-      <button id='add-member-group' class="btn btn-default" type="button">Add member</button>
+      <button id='add-member-group' class="btn btn-primary btn-app" type="button">Add member</button>
     </span>
   </div>
 
