--- a/app/views/members/_search_group.html.erb
+++ b/app/views/members/_search_group.html.erb
@@ -6,7 +6,7 @@
 
           >
     <span class="input-group-btn">
-      <button id='add-group' class="btn btn-default" type="button">Add Group</button>
+      <button id='add-group' class="btn btn-primary btn-app" type="button">Add Group</button>
     </span>
   </div>
 
