--- a/app/views/users/reset.html.erb
+++ b/app/views/users/reset.html.erb
@@ -3,5 +3,7 @@
 <p style='color:gray;font-size: 14px;'>
    <b> <%= @user.user_name %> </b>'s password has been reset to : 
    <b> <input id='pwd-hidden' type='password' value='<%= @random_password %>' class='pwd-label'/> </b>
-   <a class='btn btn-hidden-content' data-ref-id='pwd-hidden' > Show </a>
+   <p>
+     <a class='btn btn-primary btn-app btn-hidden-content' data-ref-id='pwd-hidden' > Show </a>
+    </p>
 </p>
