--- a/app/assets/stylesheets/application/layout.scss
+++ b/app/assets/stylesheets/application/layout.scss
@@ -1,8 +1,101 @@
+.logo {
+  font-family: Lato, Arial, "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 36px;
+  font-weight: normal;
+  color: $app_color;
+  margin-top: 20px;
+  a {
+    color: rgb(66, 139, 202) !important;
+  }
+}
+
+.logo-bar {
+  background: url("bar.png") no-repeat scroll center center rgba(0, 0, 0, 0);
+  height: 11px;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+.footer {
+  border-top: 1px solid #eee;
+  bottom: 0;
+  padding-top: 10px;
+  position: fixed;
+  background: #fff;
+  z-index: 999;
+}
+
+.btn-app {
+  background-color: transparent;
+  background: -moz-linear-gradient(-90deg, rgba(98, 174, 253, 1) 0%, rgba(0, 123, 255, 1) 100%);
+  background: -webkit-linear-gradient(-90deg, rgba(98, 174, 253, 1) 0%, rgba(0, 123, 255, 1) 100%);
+  background-position: center center;
+  background-repeat: repeat;
+  background-size: auto auto;
+  border-color: #67b1fd;
+  border-radius: 2px;
+  border-style: solid;
+  border-width: 0;
+  color: #fff;
+  font-family: Arial;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: normal;
+  text-align: center;
+  z-index: 10006;
+  padding: 8px 20px;
+  &:hover {
+    color: #fff;
+  }
+}
+.search-box {
+  background-color: #f7f7f7;
+  background-position: center center;
+  background-repeat: repeat;
+  background-size: auto auto;
+  border-color: #c8c8c8;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 0;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1) inset;
+  color: #757575;
+  opacity: 0.8;
+  padding: 5px 5px 5px 10px;
+  width: 245px;
+  z-index: 10034;
+  font-size: 16px;
+  input {
+    border: none;
+    background: #f7f7f7;
+    width: 200px;
+    font-family: "Glyphicons Halflings";
+  }
+}
+
 .left {
   float: left;
 }
 .right {
   float: right;
+}
+
+.tag-line {
+  color: rgb(85, 132, 224);
+  font-family: Arial;
+  font-size: 32px;
+  font-weight: 700;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.tag-line-sub {
+  color: rgb(85, 132, 224);
+  font-family: Arial;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.app-desc{
+  margin-top: 15px;
 }
 
 .pwd-label {
