--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -1,17 +1,34 @@
 body {
-  padding-top: 60px;
+  font-family: Arial, "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px; //reset font-size to 14px
+  padding-bottom: 60px !important; //for fixed footer
+}
+
+table {
+  border: 1px solid #d9d9d9;
 }
 
 thead{
   tr {
-    background: #fff;
+    background: -moz-linear-gradient(-90deg, rgba(255, 255, 255, 1) 0%, rgba(245, 245, 245, 1) 100%);
+    background: -webkit-linear-gradient(-90deg,rgba(255, 255, 255, 1) 0%, rgba(245, 245, 245, 1) 100%)
   }
   td {
-    font-weight: bold;
-    opacity: 0.8;
+    padding: 14px !important;
+    font-size: 16px;
   }
 }
-
+tbody {
+  td {
+    padding: 14px 10px !important;
+  }
+}
+a:hover {
+  text-decoration: none;
+}
+.pagination {
+  margin: 0;
+}
 table {
   @include border-radius(4px);
   border: 1px solid #eee !important;
@@ -19,7 +36,7 @@ table {
 }
 
 .form-control {
-  padding: 6px;
+  height: 40px;
 }
 
 .form {
@@ -39,12 +56,8 @@ table {
 }
 
 .list-header {
-  // padding: 0px 10px;
-  // background: #fff;
-  // border: 1px solid #eee;
-
   h3 {
-    margin: 10px 0 !important;
+    margin: 15px 0;
   }
   .right {
     margin-top: 5px;
