--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,12 +1,18 @@
-<%= paginate_for(@alerts) %>
+<% content_for(:title) { "Alerts"} %>
+<%= page_header "List Alert" %>
 
-<%= page_header "List Alert" do %>
-  <%= link_to matched_alerts_path(), class: 'btn btn-default' do %>
-    <span class='glyphicon glyphicon-flash'> </span> Alert Content
-  <% end %>
-  <span> </span>
-  <%= link_new 'New Alert', new_alert_path(), class: 'btn btn-default' %>
-<% end %>
+<div class='clearfix' >
+
+  <div class='left'>
+    <%= link_custom 'Alert Content', matched_alerts_path(), class: 'btn btn-default'%>
+    <span> </span>
+    <%= link_custom'New Alert', new_alert_path(), class: 'btn btn-default' %>
+  </div>
+
+  <div class='right'>
+    <%= render 'shared/search_form', url: alerts_path() %>
+  </div>
+</div>
 
 
 <table class='table panel'>
