--- a/app/views/layouts/sign_in.html.erb
+++ b/app/views/layouts/sign_in.html.erb
@@ -13,7 +13,11 @@
   <body>
     <div class='container'>
       <div>
-        <div class='text-center logo'> <%= link_to ENV['APP_NAME'], root_url %> </div>
+        <div class='text-center logo'>
+          <%= link_to root_url do %>
+            <%=image_tag 'feed-alert-logo.png', alt: ENV['APP_NAME'] %>
+          <% end %>
+        </div>
         <div class='logo-bar'></div>
       </div>
 
