--- a/app/assets/stylesheets/application/layout.scss
+++ b/app/assets/stylesheets/application/layout.scss
@@ -10,7 +10,7 @@
 }
 
 .logo-bar {
-  background: url("bar.png") no-repeat scroll center center rgba(0, 0, 0, 0);
+  background: asset-url("bar.png") no-repeat scroll center center rgba(0, 0, 0, 0);
   height: 11px;
   margin-bottom: 30px;
   margin-top: 20px;
