--- a/app/views/layouts/_nav_menu.html.erb
+++ b/app/views/layouts/_nav_menu.html.erb
@@ -9,7 +9,12 @@
 
       <% if user_signed_in? %>
         <ul id='right-menu'>
-          <li> <i class='glyphicon glyphicon-user'> </i> <%= current_user.full_name %> </li>
+          <li>
+             <%= link_to profile_users_path do %>
+               <i class='glyphicon glyphicon-user'> </i> <%= current_user.full_name %>
+             <% end %>
+
+          </li>
           <li>
             <%= link_to sign_out_path(), method: :delete do %>
               <i class='glyphicon glyphicon-log-out'> </i> Sign Out
