--- a/app/views/alerts/edit.html.erb
+++ b/app/views/alerts/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title) { "Alert"} %>
-<%= page_header "Edit alert" %>
+<%= page_header "Edit Alert" %>
 <div class='row'>
   <div class='col-lg-6'>
     <%= render 'form' %>
