--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,4 +1,4 @@
 <% content_for(:title) { "Alert"} %>
-<%= page_header "Create an alert" %>
+<%= page_header "Create Alert" %>
 
 <%= render 'form' %>
