--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,4 @@
 <% content_for(:title) { "New User"} %>
-<%= page_header "Create a group" %>
+<%= page_header "Create Group" %>
 
 <%= render 'form' %>
