--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
 <% content_for(:title) { "New User"} %>
-<%= page_header "Create a new User" %>
+<%= page_header "Create User" %>
 
 <%= render 'form' %>
