--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,4 +1,4 @@
 <% content_for(:title) { "New User"} %>
-<%= page_header "Create a member" %>
+<%= page_header "Create Member" %>
 
 <%= render 'form' %>
