fix problem of autocomplete

--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -118,3 +118,38 @@ em.highlight {
     padding: 10px;
   }
 }
+
+#notification {
+  background: #eee;
+  right: 25px;
+  top: 65px;
+  border: 1px solid #fff;
+  position: fixed;
+  display: block;
+  z-index: 99999;
+  min-width: 320px;
+  padding: 5px 10px;
+  @include border-radius(3px);
+  .bs-callout-danger {
+    color: red;
+  }
+  .bs-callout-info {
+    color: green;
+  }
+
+  .bs-callout {
+
+    h4 {
+      border-bottom: 1px solid #fff;
+      font-size: 16px;
+      margin: 0 -10px;
+      padding-bottom: 10px;
+      padding-left: 15px;
+      padding-top: 5px;
+    }
+    p {
+      padding-top: 10px;
+      margin-left: 10px;
+    }
+  }
+}
