--- a/app/views/alerts/_alert_groups.html.erb
+++ b/app/views/alerts/_alert_groups.html.erb
@@ -9,7 +9,7 @@
             data-url="<%= new_groups_alert_path(@alert) %>" >
 
       <span class="input-group-btn">
-        <%= link_to "Add Group", alert_alert_groups_path(@alert), class: 'btn btn-app typeahead-add', id: 'add-alert-group' %>
+        <%= link_to "Add Group", alert_alert_groups_path(@alert), class: 'btn btn-primary btn-app typeahead-add', id: 'add-alert-group' %>
       </span>
     </div>
 
