--- a/app/views/alerts/_alert_keywords.html.erb
+++ b/app/views/alerts/_alert_keywords.html.erb
@@ -9,7 +9,7 @@
             data-url="<%= new_keywords_alert_path(@alert) %>" >
 
       <span class="input-group-btn">
-        <%= link_to "Add Keyword", alert_alert_keywords_path(@alert), class: 'btn btn-app typeahead-add', id: 'add-alert-keyword' %>
+        <%= link_to "Add Keyword", alert_alert_keywords_path(@alert), class: 'btn btn-primary btn-app typeahead-add', id: 'add-alert-keyword' %>
       </span>
     </div>
 
