--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
 
   <body>
+
+    <%= render 'layouts/shared/notification' %>
+    <%= render 'layouts/shared/config' %>
     <%= render "layouts/nav_menu" %>
+
     <div class='container'>
       
       <%= render "layouts/logo" %>
