--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -22,7 +22,9 @@
         <div class="content">
         <table bgcolor="#999999">
           <tr>
-            <td><img src="http://placehold.it/200x50/" /></td>
+            <td>
+              <h3> <%=image_tag 'feed-alert-logo.png', alt: 'Feed Alert' %> </h3>
+            </td>
           </tr>
         </table>
         </div>
