--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -119,6 +119,12 @@ em.highlight {
   }
 }
 
+.sub-text {
+  font-weight: 400;
+  font-size: 90%;
+  color: gray;
+}
+
 #notification {
   background: #eee;
   right: 25px;
