--- a/app/views/alert_mailer/notify_matched.html.erb
+++ b/app/views/alert_mailer/notify_matched.html.erb
@@ -1,10 +1,6 @@
 
 <%= content_for(:mailer_header) do %>
-  <h3><%= "#{@alert.name}" %> </h3>
-  <p>
-    <%= link_to 'View on website',
-                matched_alert_feed_entries_url(@alert.id, from: @date_range.from, to:@date_range.to) %>
-  </p>
+  <h3><%= link_to @alert.name, matched_alert_feed_entries_url(@alert.id, from: @date_range.from, to:@date_range.to) %> </h3>
   
   <p style='color:gray; font-size: 90%; font-style:italic;'>
     <a href='<%= @alert.url %>'> <%= @alert.url %> </a>
