--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -14,13 +14,13 @@
 <body bgcolor="#FFFFFF">
 
 <!-- HEADER -->
-<table class="head-wrap" bgcolor="#999999">
+<table class="head-wrap" bgcolor="#eee">
   <tr>
     <td></td>
     <td class="header container" >
         
         <div class="content">
-        <table bgcolor="#999999">
+        <table bgcolor="#eee">
           <tr>
             <td>
               <h1> <%= link_to(root_url, alt: 'Feed Alert') { mailer_image_tag("feed-alert-logo.png", alt: ENV['APP_NAME']) } %> </h1>
