--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -51,7 +51,7 @@
 
             <!-- Callout Panel -->
             <p class="callout" style='margin-top: 60px;' >
-              This email is from <%=ENV['APP_NAME']%>
+              This email is from <b><%=ENV['APP_NAME']%></b>
             </p><!-- /Callout Panel -->         
                         
             <!-- social & contact -->
