--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,10 @@
         <span style='margin-right: 15px;'> Get started </span>
         <%= link_to "Sign In", sign_in_path(), class: 'btn btn-primary btn-app' %>
       </p>
+
+      <p class="app-desc" style="margin-top: 45px;">
+        <%= render 'shared/account' %>
+      </p>
     <% end %>
 
   </div>
