--- a/app/views/alerts/edit.html.erb
+++ b/app/views/alerts/edit.html.erb
@@ -1,13 +1,19 @@
-<% content_for(:title) { "Alert"} %>
-<%= page_header "Edit Alert" %>
-<div class='row'>
-  <div class='col-lg-6'>
-    <%= render 'form' %>
-  </div>
-  
-  <div class='col-lg-6'>
-    <%= render 'alert_groups' %>
-    <%= render 'alert_keywords' %>
-  </div>
-</div>
+<% content_for(:title) { "Edit Alert"} %>
 
+<% content_for(:alert_tab) do %>
+
+  <div class='row'>
+    <div class='col-lg-6'>
+      <h4> Edit Alert </h4>
+      <%= render('form', project: @project, alert: @alert)  %>
+    </div>
+    
+    <div class='col-lg-6'>
+      <%= render 'alert_groups' %>
+      <%= render 'alert_keywords' %>
+    </div>
+  </div>
+
+<% end %>
+
+<%= render 'shared/project_overview', project: @project, project_in_tab: 2 %>
