--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,47 +1,4 @@
 <% content_for(:title) { "Alerts"} %>
-<%= page_header "List of Alerts" %>
 
-<div class='clearfix' >
-
-  <div class='left'>
-    <%= link_custom 'Alert Content', matched_alerts_path(), class: 'btn btn-default'%>
-    <span> </span>
-    <%= link_custom'New Alert', new_alert_path(), class: 'btn btn-default' %>
-  </div>
-
-  <div class='right'>
-    <%= render 'shared/search_form', url: alerts_path() %>
-  </div>
-</div>
-
-
-<table class='table panel'>
-  <thead>
-    <tr>
-      <td>Name</td>
-      <td>Url</td>
-      <td>Keywords</td>
-      <td class='td-last'>Action</td>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @alerts.each do |alert| %>
-      <tr>
-        <td>
-          <%= link_to alert.name, edit_alert_path(alert) %>
-          <p class="sub-text">
-            <span>Sms alert </span> (<%= alert_time(alert) %>)
-          </p>
-        </td>
-        <td><%= alert.url %></td>
-        <td><%= truncate(alert.keywords.map(&:name).join(","), length: 120) %></td>
-        <td>
-           <%= link_edit " ", edit_alert_path(alert) %>
-           <%= link_destroy " ", alert_path(alert), method: :delete, data: { confirm: 'Are you sure to delete this alert ?' } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<%= paginate_for(@alerts) %>
+<% content_for(:alert_tab) { render('shared/project_alerts', project: @project) } %>
+<%= render 'shared/project_overview', project: @project, project_in_tab: 2 %>
