--- a/app/views/groups/_search_member.html.erb
+++ b/app/views/groups/_search_member.html.erb
@@ -1,12 +1,12 @@
 <div>
   <div class="input-group">
     <input id='member-typeahead' type="text" 
-          class="form-control typeahead" placeholder="Add Member"
+          class="form-control typeahead" placeholder="Add Recipient"
           data-url="<%= new_members_group_path(@group) %>"
 
           >
     <span class="input-group-btn">
-      <button id='add-member-group' class="btn btn-primary btn-app" type="button">Add member</button>
+      <button id='add-member-group' class="btn btn-primary btn-app" type="button">Add Recipient</button>
     </span>
   </div>
 
