--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,7 @@
 <% content_for(:title) { "New User"} %>
-<%= page_header "Create Group" %>
 
+<%= render "shared/group_recipient_tab", group_recipient_tab_index: 1 %>
+<br />
+
+<h4> New Group</h4>
 <%= render 'form' %>
