--- a/app/views/layouts/_nav_menu.html.erb
+++ b/app/views/layouts/_nav_menu.html.erb
@@ -1,7 +1,7 @@
 <div id='toolbar'>
   <div class='container'>
     <div id="nav-menu">
-      <ul>
+      <ul class='main-menu'>
         <% app_menu.each do |item| %>
           <li class='<%=item[:class]%>'><%= link_to item[:text], item[:url] %></li>
         <% end %>
@@ -9,10 +9,20 @@
 
       <% if user_signed_in? %>
         <ul id='right-menu'>
-          <li>
-             <%= link_to profile_users_path do %>
+          <li class="dropdown">
+             <%= link_to profile_users_path, class: 'dropdown-toggle', id: 'dropdownMenu1', data: {toggle: 'dropdown'} do %>
                <i class='glyphicon glyphicon-user'> </i> <%= current_user.full_name %>
+               <span class="caret"></span>
              <% end %>
+
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+              <li role="presentation">
+                <%= link_to "Profile", profile_users_path, role: 'menuitem' %>
+               </li>
+              <li role="presentation">
+                <%= link_to "Change Password", profile_users_path, role: 'menuitem' %>
+              </li>
+            </ul>
 
           </li>
           <li>
