--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,9 +1,11 @@
-<% content_for(:title) { "Members"} %>
-<%= page_header "List of Members" %>
+<% content_for(:title) { "Recipients"} %>
+
+<%= render "shared/group_recipient_tab", group_recipient_tab_index: 2 %>
+<br />
 
 <div class='clearfix'>
   <div class='left'>
-    <%= link_custom 'New Member', new_member_path() %>
+    <%= link_custom 'New Recipient', new_member_path() %>
   </div>
 
   <div class='right'>
@@ -20,6 +22,7 @@
       <td>Number</td>
       <td>Email Alert</td>
       <td>SMS Alert</td>
+      <td>Groups</td>
       <td class='td-last'>Action</td>
     </tr>
   </thead>
@@ -31,9 +34,10 @@
         <td><%= member.phone %></td>
         <td><%= boolean_text member.email_alert %></td>
         <td><%= boolean_text member.sms_alert %></td>
+        <td><%= truncate(member.groups.map(&:name).join(", "), length: 45) %></td>
         <td>
           <%= link_edit " ", edit_member_path(member) %>
-          <%= link_destroy " ", member_path(member), method: :delete, data: { confirm: 'Are you sure to delete this member ?' } %>
+          <%= link_destroy " ", member_path(member), method: :delete, data: { confirm: 'Are you sure to delete this recipient ?' } %>
         </td>
       </tr>
     <% end %>
