--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,4 +1,48 @@
 <% content_for(:title) { "Alerts"} %>
 
-<% content_for(:alert_tab) { render('shared/project_alerts', project: @project) } %>
-<%= render 'shared/project_overview', project: @project, project_in_tab: 2 %>
+<%= render 'shared/project_alert', project: @project, project_tab: 2 %>
+
+
+<div class='clearfix' style='margin-top: 15px;' >
+
+  <div class='left'>
+    <%= link_custom 'Alert Content', matched_project_alerts_path(@project), class: 'btn btn-default'%>
+    <span> </span>
+    <%= link_custom'New Alert', new_project_alert_path(@project), class: 'btn btn-default' %>
+  </div>
+
+  <div class='right'>
+    <%= render 'shared/search_form', url: project_alerts_path(@project) %>
+  </div>
+</div>
+
+
+<table class='table panel'>
+  <thead>
+    <tr>
+      <td>Name</td>
+      <td>Url</td>
+      <td>Keywords</td>
+      <td class='td-last'>Action</td>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @project.alerts.each do |alert| %>
+      <tr>
+        <td>
+          <%= link_to alert.name, edit_project_alert_path(@project, alert) %>
+          <p class="sub-text">
+            <span>Sms alert </span> (<%= alert_time(alert) %>)
+          </p>
+        </td>
+        <td><%= alert.url %></td>
+        <td><%= truncate(alert.keywords.map(&:name).join(","), length: 120) %></td>
+        <td>
+           <%= link_edit " ", edit_project_alert_path(@project, alert) %>
+           <%= link_destroy " ", project_alert_path(@project, alert), method: :delete, data: { confirm: 'Are you sure to delete this alert ?' } %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
