--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%=simple_form_for(project, html: { class: 'form-inline form'}) do |f| %>
+<%=simple_form_for(@project, html: { class: 'form-inline form'}) do |f| %>
 
   <div class='input-row'>
     <%=f.input :name, input_html: {class: 'form-control'} %>
@@ -10,4 +10,12 @@
     <label></label>
     <%=f.submit 'Save', label: false, class: 'btn btn-primary btn-app' %>
   </div>
+<% end %>
+
+<% if @project.persisted? %>
+  <p style="margin-top: 60px;">
+    <%= link_to project_path(@project), method: :delete, style: 'margin-left: 13em;' do %>
+      <i class='glyphicon glyphicon-trash'> </i> Delete this project
+    <% end %>
+  </p>
 <% end %>
