--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,4 @@
 <% content_for(:title) { "Edit Project"} %>
 
-<% content_for(:alert_tab) { render('shared/project_alerts', project: @project) } %>
-
-<%= render 'shared/project_overview', project: @project, project_in_tab: 1 %>
+<%= render 'shared/project_alert', project: @project, project_tab: 1 %>
+<%=render 'form' %>
