--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,4 @@
 <% content_for(:title) { "New User"} %>
 
-<% content_for(:alert_tab) {} %>
-<%= render 'shared/project_overview', project: @project, project_in_tab: 1 %>
+<%= render 'shared/project_alert', project: @project, project_tab: 1 %>
+<%=render 'form' %>
